fix: update z-index for modal clan icons

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -10928,7 +10928,7 @@ input [type="image"]:focus {
 }
 
 #modal-clan-icons {
-  z-index: 102;
+  z-index: 130;
   background-color: rgba(0, 0, 0, 0.75);
 }
 
